Fix wrong fonts on the List Header text, when filtering by tag.

--- a/src/background/css/list.styl
+++ b/src/background/css/list.styl
@@ -337,3 +337,14 @@
     cursor: wait;
     color: #888;
 }
+
+/* List header
+ */
+
+.header-list .fa {
+    margin-right: .4em;
+
+    color: #444;
+    font-size: .6em;
+    vertical-align: middle;
+}
